Remove test messages endpoint, add create message endpoint
