# app/internal/models/add_message_response.go
@@ -1,0 +1,7 @@
+package models
+
+type AddMessageResponse struct {
+	ID        int    `json:"id"`
+	Recipient string `json:"recipient"`
+	Content   string `json:"content"`
+}
